feat(websocket): basic implementation

--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <h1>Hello world!</h1>
   <script src="config.js"></script>
   <script src="main.js"></script>
+  <script src="../services/websocket_client.js"></script>
 </body>
 </html>
