feat(client): display error message on network/server event

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,9 @@
       <ul></ul>
     </div>
   </div>
+  <div id="error">
+    Une erreur de connexion ou de serveur s'est produite. Veuillez contacter un administrateur du système ou réessayer plus tard.
+  </div>
   <script src="config.js"></script>
   <script src="./services/websocket_client.js?v=1.0"></script>
   <script src="./services/http_client.js?v=1.0"></script>
