feat: chat service!

--- a/client/index.html
+++ b/client/index.html
@@ -38,11 +38,12 @@
     </div>
     <div id="chat">
       <h2>Tchat</h2>
-      <form id="chatPlayer" onsubmit="event.preventDefault()">
-        <div class="playerSearch">
-          <input type="text" placeholder="Nickname ..."></input>
-        </div>
-      </form>
+      <div class="playerSearch">
+        <input type="text" placeholder="Nickname ..."></input>
+      </div>
+      <ul>
+      </ul>
+      <textarea id="messageBox" type="text" placeholder="Message ..."></textarea>
     </div>
     <div id="error">
       Une erreur de connexion ou de serveur s'est produite. Veuillez contacter un administrateur du système ou réessayer plus tard.
