feat(chat): indenticons!

--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,10 @@
       </div>
     </div>
     <div id="chat">
-      <h2>Tchat</h2>
+      <div id="chatHeader">
+        <h2>Tchat</h2>
+        <span></span>
+      </div>
       <div class="playerSearch">
         <input type="text" placeholder="Nickname ..."></input>
       </div>
