fix(client): display error on http error

--- a/client/index.html
+++ b/client/index.html
@@ -55,6 +55,7 @@
   <script src="config.js"></script>
   <script src="./services/websocket_client.js?v=1.0"></script>
   <script src="./services/http_client.js?v=1.0"></script>
+  <script src="./services/error.js?v=1.0"></script>
   <script src="./components/player_search/player_search.js?v=1.0"></script>
   <script src="./components/game_board/new_game.js?v=1.0"></script>
   <script src="./components/game_board/game_list.js?v=1.0"></script>
