feat(menu): menu component and mobile styles

--- a/client/index.html
+++ b/client/index.html
@@ -12,12 +12,20 @@
   <link rel="stylesheet" href="./components/game_board/game_list.css?v=1.0"/>
   <link rel="stylesheet" href="./components/player_search/player_search.css?v=1.0"/>
   <link rel="stylesheet" href="./components/chat/chat.css?v=1.0"/>
+  <link rel="stylesheet" href="./components/menu/menu.css?v=1.0"/>
   <link rel="stylesheet" href="mobile.css?v=1.0">
-</head>
+  <link rel="icon" href="./assets/favicon.ico"> </head>
 <body>
   <div id="header">
     <h1>BabyFoot Manager</h1>
     <img src="assets/icon.png"/>
+    <div id="menu" tabindex="0">
+      <a>&#8801;</a>
+      <ul>
+        <li><a>Parties</a></li>
+        <li><a>Tchat</a></li>
+      </ul>
+    </div>
   </div>
   <div id="flexContainer">
     <div id="gameBoard">
@@ -60,5 +68,6 @@
   <script src="./components/game_board/new_game.js?v=1.0"></script>
   <script src="./components/game_board/game_list.js?v=1.0"></script>
   <script src="./components/chat/chat.js?v=1.0"></script>
+  <script src="./components/menu/menu.js?v=1.0"></script>
 </body>
 </html>
