fix(client): init compontents after webSocket connection due to hoisting issue

--- a/client/index.html
+++ b/client/index.html
@@ -69,5 +69,6 @@
   <script src="./components/game_board/game_list.js?v=1.0"></script>
   <script src="./components/chat/chat.js?v=1.0"></script>
   <script src="./components/menu/menu.js?v=1.0"></script>
+  <script src="init.js?v=1.0"></script>
 </body>
 </html>
