fix(client): set logo image size to fix annoying jank on load

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
 <body>
   <div id="header">
     <h1>BabyFoot Manager</h1>
-    <img src="assets/icon.png"/>
+    <img width='60px' height='42px' src="assets/icon.png"/>
     <div id="menu" tabindex="0">
       <a>&#8801;</a>
       <ul>
