--- a/client/index_v1.html
+++ b/client/index_v1.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="./components/chat/chat.css?v=1.0"/>
   <link rel="stylesheet" href="./components/menu/menu.css?v=1.0"/>
   <link rel="stylesheet" href="mobile.css?v=1.0">
+  <link rel="stylesheet" href="browser.css?v=1.0">
   <link rel="icon" href="./assets/favicon.ico"> </head>
 <body>
   <div id="header">
